--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
-PROJECT(ClientServerEcn)
+PROJECT(EcnClientServer)
 
 FIND_PACKAGE(Boost 1.40 COMPONENTS system REQUIRED)
 FIND_PACKAGE(Threads REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
 SET(CMAKE_CXX_STANDARD 17)
+
+ADD_SUBDIRECTORY(src)
