Реализация EcnTcpClient. Добавлен заголовный файл для клиента и сервера.

--- a/src/Client/CMakeLists.txt
+++ b/src/Client/CMakeLists.txt
@@ -1,2 +1,7 @@
-ADD_EXECUTABLE(Client main.cpp EcnTcpClient.cpp)
+ADD_EXECUTABLE(Client 
+    main.cpp
+    EcnTcpClient.cpp
+    EcnTcpClient.hpp)
+
 TARGET_LINK_LIBRARIES(Client PRIVATE Threads::Threads ${Boost_LIBRARIES})
+TARGET_INCLUDE_DIRECTORIES(Client PRIVATE ${COMMON_DIR} ${CMAKE_CURRENT_LIST_DIR} MenuPages)
