Добавил страницы меню для клиента

--- a/src/Client/CMakeLists.txt
+++ b/src/Client/CMakeLists.txt
@@ -1,7 +1,14 @@
 ADD_EXECUTABLE(Client 
     main.cpp
     EcnTcpClient.cpp
-    EcnTcpClient.hpp)
+    EcnTcpClient.hpp
+    MenuPages/MainMenuPage.cpp
+    MenuPages/MainMenuPage.hpp
+    MenuPages/OpenDealMenuPage.cpp
+    MenuPages/OpenDealMenuPage.hpp
+    MenuPages/DealLogMenuPage.hpp
+    MenuPages/BalanceMenuPage.hpp
+    MenuPages/IMenuPage.hpp)
 
 TARGET_LINK_LIBRARIES(Client PRIVATE Threads::Threads ${Boost_LIBRARIES})
 TARGET_INCLUDE_DIRECTORIES(Client PRIVATE ${COMMON_DIR} ${CMAKE_CURRENT_LIST_DIR} MenuPages)
