Добавлен таргет сервера

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
 PROJECT(EcnClientServer)
 
+ADD_SUBDIRECTORY(third-party/sqlite_orm)
+
 FIND_PACKAGE(Boost 1.40 COMPONENTS system REQUIRED)
 FIND_PACKAGE(Threads REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
