--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 SET(COMMON_DIR ${CMAKE_CURRENT_LIST_DIR}/Common)
 
 ADD_SUBDIRECTORY(Client)
-#ADD_SUBDIRECTORY(Server)
+ADD_SUBDIRECTORY(Server)
 #ADD_SUBDIRECTORY(Common)
