Добавлена функция для инициализации и получения БД

--- a/src/Server/CMakeLists.txt
+++ b/src/Server/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_EXECUTABLE(Server 
-    main.cpp)
+    main.cpp
+    DataBase.hpp)
 
 TARGET_LINK_LIBRARIES(Server PRIVATE Threads::Threads ${Boost_LIBRARIES} sqlite_orm::sqlite_orm)
 TARGET_INCLUDE_DIRECTORIES(Server PRIVATE ${COMMON_DIR} ${CMAKE_CURRENT_LIST_DIR})
