--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,17 @@ PROJECT(EcnClientServer)
 
 ADD_SUBDIRECTORY(third-party/sqlite_orm)
 
+INCLUDE(FetchContent)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+ 
+  GIT_TAG release-1.12.1
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+SET(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
 FIND_PACKAGE(Boost 1.40 COMPONENTS system REQUIRED)
 FIND_PACKAGE(Threads REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
@@ -10,3 +21,4 @@ INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 SET(CMAKE_CXX_STANDARD 17)
 
 ADD_SUBDIRECTORY(src)
+ADD_SUBDIRECTORY(tests)
