--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,9 @@
+SET(COMMON_DIR ${CMAKE_CURRENT_LIST_DIR}/Common PARENT_SCOPE)
 SET(COMMON_DIR ${CMAKE_CURRENT_LIST_DIR}/Common)
 
 ADD_SUBDIRECTORY(Client)
 ADD_SUBDIRECTORY(Server)
+
+SET(SERVER_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/Server PARENT_SCOPE)
+
 #ADD_SUBDIRECTORY(Common)
